FISH-8652: Downgrade list construction.
Should include all instance of List.of() in the repository.