@@ -28,7 +28,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.OffsetDateTime;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 
 import static com.hazelcast.jet.pipeline.file.JsonFileFormat.FORMAT_JSON;
@@ -64,7 +64,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                List.of(new Row(null, null))
+                Arrays.asList(new Row(null, null))
         );
     }
 
@@ -83,7 +83,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                List.of(new Row("Alice", "Bob"))
+                Arrays.asList(new Row("Alice", "Bob"))
         );
     }
 
@@ -111,7 +111,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
         // assert both - initial & evolved - records are correctly read
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                List.of(
+                Arrays.asList(
                         new Row(13, "Alice", null),
                         new Row(69, "Bob", 123456789L)
                 )
@@ -147,7 +147,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
 
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + to,
-                List.of(new Row(
+                Arrays.asList(new Row(
                         "1",
                         "string",
                         true,
@@ -189,7 +189,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                List.of(new Row(
+                Arrays.asList(new Row(
                         new HazelcastJsonValue("[1,2,3]"),
                         new HazelcastJsonValue("[4,5,6]")
                 ))
@@ -244,7 +244,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
 
         assertRowsEventuallyInAnyOrder(
                 "SELECT __key, this FROM " + name,
-                List.of(new Row(
+                Arrays.asList(new Row(
                         Map.of("id", 1),
                         Map.of("name", "Alice")
                 ))
@@ -270,7 +270,7 @@ public class SqlJsonTest extends KafkaSqlTestSupport {
         );
         assertRowsEventuallyInAnyOrder(
                 "SELECT * FROM " + name,
-                List.of(new Row("Alice", "Bob"))
+                Arrays.asList(new Row("Alice", "Bob"))
         );
     }
 
